# Radpharm

./: .gitignore  CMakeLists.txt  Cu64Production.py  Ni64_HNO3_generalized.py  Ni64_HNO3_generalized_results_100%.csv  Ni64_HNO3_generalized_results_95.0%.csv  Ni64_HNO3_generalized_results_99.0%.csv  PlotGenericBateman2.C  README.md  Radpharm.cc  ana.C  ana2.C  density.ipynb  init_vis.mac  merge_reactions.py  plotEdep.C  run.mac  vis.mac
include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  ReactionData.hh  RunAction.hh  SteppingAction.hh  TrackInformation.hh
macros/: PlotGenericBateman.C  ana2.C  merge_reactions.py  plotYield.ipynb
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  TrackInformation.cc
